Fixed bug #32533 (proc_get_status() returns the incorrect process status).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@183916 c90b9560-bf6c-de11-be94-00142212c4b1